<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".internal.ui.TransactionOverviewFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interceptor_url"
            style="@style/Interceptor.TextAppearance.Label"/>

        <TextView
            android:id="@+id/url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Interceptor.TextAppearance.Value"
            tools:text="https://example.com/path/to/resource?here=might_be_really_long"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interceptor_method"
                style="@style/Interceptor.TextAppearance.Label"/>

            <TextView
                android:id="@+id/method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Interceptor.TextAppearance.Value"
                tools:text="GET"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interceptor_protocol"
                style="@style/Interceptor.TextAppearance.Label"/>

            <TextView
                android:id="@+id/protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Interceptor.TextAppearance.Value"
                tools:text="HTTP/1.1"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interceptor_status"
                style="@style/Interceptor.TextAppearance.Label"/>

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Interceptor.TextAppearance.Value"
                tools:text="Complete"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interceptor_response"
                style="@style/Interceptor.TextAppearance.Label"/>

            <TextView
                android:id="@+id/response"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Interceptor.TextAppearance.Value"
                tools:text="200 OK"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interceptor_ssl"
                style="@style/Interceptor.TextAppearance.Label"/>

            <TextView
                android:id="@+id/ssl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Interceptor.TextAppearance.Value"
                tools:text="Yes"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interceptor_request_time"
                style="@style/Interceptor.TextAppearance.Label"/>

            <TextView
                android:id="@+id/request_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Interceptor.TextAppearance.Value"
                tools:text="05/02/17 11:52:49"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interceptor_response_time"
                style="@style/Interceptor.TextAppearance.Label"/>

            <TextView
                android:id="@+id/response_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Interceptor.TextAppearance.Value"
                tools:text="05/02/17 11:52:49"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interceptor_duration"
                style="@style/Interceptor.TextAppearance.Label"/>

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Interceptor.TextAppearance.Value"
                tools:text="405 ms"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interceptor_request_size"
                style="@style/Interceptor.TextAppearance.Label"/>

            <TextView
                android:id="@+id/request_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Interceptor.TextAppearance.Value"
                tools:text="53 KB"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interceptor_response_size"
                style="@style/Interceptor.TextAppearance.Label"/>

            <TextView
                android:id="@+id/response_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Interceptor.TextAppearance.Value"
                tools:text="148 KB"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interceptor_total_size"
                style="@style/Interceptor.TextAppearance.Label"/>

            <TextView
                android:id="@+id/total_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Interceptor.TextAppearance.Value"
                tools:text="201 KB"/>

        </TableRow>

    </TableLayout>

</androidx.core.widget.NestedScrollView>
